--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== AuctionHero
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A simple replication of a hypothetical Ebay Auction site that I created during a single morning to test my skills.
 
-Things you may want to cover:
+* Built with TDD using <tt>RSpec</tt>
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Supports bidding between multiple users, with minimum bid increments.  New auctions can also be supported.
